src/app.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';


/* Color Scheme:
    Navy: 384B70
    Teal: 507687
    Whitesmoke: FCFAEE
    Red: B8001F
*/


.headerOverall {
    @apply bg-[#B8001F] font-bold text-4xl text-[#FCFAEE] pt-2 pl-2 pb-3 flex;
}

.footerOverall{
    @apply bg-[#B8001F] font-semibold text-4xl text-[#FCFAEE] pt-1 pb-1 flex
}

.hoverHeader{
    @apply hover:text-[#384B70] hover:border-[#384B70] cursor-pointer transition-all duration-300 hover:opacity-100 hover:transform hover:translate-y-[-5px];
}
.hoverHeaderHam{
    @apply cursor-pointer;
}

.headshot {
    @apply rounded-full shadow-xl md:w-64 md:h-64 w-28 h-28 object-contain ml-10;
}

.Intro{
    @apply sm:w-4/5 w-2/5 bg-[#384B70] pb-7 pt-5 rounded-3xl mt-10 flex sm:flex-row flex-col justify-center shadow-lg
}

.Name {
    @apply font-bold text-5xl text-[#FCFAEE] mt-14 pl-16
}

.IntroDesc{
    @apply text-[#FCFAEE] mt-7 pl-16 font-semibold text-lg pr-10
}

.Card {
    @apply w-11/12 md:w-2/5 bg-[#384B70] rounded-3xl text-[#FCFAEE] font-semibold text-lg pb-5 shadow shadow-xl
}

.CardTitle{
    @apply font-bold text-5xl text-[#FCFAEE] mt-3 pl-10 
}

.CardDesc{
    @apply text-[#FCFAEE] mt-7 pl-10 font-semibold text-lg pr-10
}

.Tag{
    @apply text-[#FCFAEE] bg-[#B8001F] p-0.5 px-1.5 rounded-md transition-all duration-500 hover:text-[#B8001F] hover:bg-[#FCFAEE] cursor-default
}

.hoverFooter{
    @apply cursor-pointer transition-all duration-200 hover:opacity-100 hover:transform hover:translate-y-[-5px];
}

